[package]
name = "testboard"
version = "0.1.0"
authors = ["Mathias Svensson <freaken@freaken.dk>"]

[dependencies]
efm32hg309f64 = { git = "https://github.com/Idolf/efm32hg309f64.git", features = ["rt"] }
cortex-m = { version = "0.5.2", features = ["const-fn"]}
cortex-m-rt = "0.5.1"
panic-semihosting = "0.2.0"
cortex-m-semihosting = "0.3.0"
# futures = { git = "https://github.com/rust-lang-nursery/futures-rs.git", default-features = false, features = ["nightly"] }
heapless = { git = "https://github.com/japaric/heapless.git" }

[profile.release]
debug-assertions = true
# panic = 'abort'
lto = true
